changes made in main branch

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <P>hello i am in local repo</P>
-<p>this is to inform the changes made here</p>
+<p>this is to inform the changes made here(in main branch)</p>
